# simplevoice

./: .gitignore  CLAUDE.md  README.md  index.html  landing.html  package.json  pnpm-lock.yaml  vite.config.ts
scripts/: download_model.sh
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.microsoftstore.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: audio.rs  config.rs  hotkey.rs  inject.rs  main.rs  transcribe.rs  tray.rs
src/hooks/: useRecording.ts
src/pages/: Onboarding.tsx  Settings.tsx
whisper-rs-sys-patched/: build.rs
