[package]
name = "simple-voice"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rubato = "0.16"
cpal = "0.15"
enigo = "0.2"
whisper-rs = "0.16"
anyhow = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
