[package]
name = "simple-voice"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rubato = "0.16"
cpal = "0.15"
enigo = "0.2"
whisper-rs = { version = "0.16", features = ["openmp"] }
anyhow = "1"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-notification = "2"
tauri-plugin-shell = "2"
chrono = "0.4"  

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"

[profile.release]
opt-level = 3
lto = "thin"        # thin 比 fat 更安全，Windows MSVC 兼容性好
# lto = true
codegen-units = 1
# strip = true
strip = false       # Microsoft Store 需要保留符号用于崩溃分析

[patch.crates-io]
whisper-rs-sys = { path = "../whisper-rs-sys-patched" }
